[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tokio-runtime", "tokio-time"]

[workspace.dependencies]
futures = "0"
async-trait = "0"
pin-project-lite = "0"

tokio = "1"
tokio-util = "0"
tokio-metrics = "0"
tokio-metrics-collector = "0"

paste = "1"
prometheus = "0"
parking_lot = "0"

snafu = "0"
snafu-stack-error = { git = "https://github.com/Oatelauser/snafu-stack-error.git" }
